# llm-learn

./: .env  .env.example  main.py  pyproject.toml  requirements.txt
engineer/: .env.example  pyproject.toml
engineer/agent/: agent.py  tools.py
engineer/algorithm/: dp.py
engineer/docs/: @dataclass.md  A2A协议.md  Agent设计与实践.md  agentic设计模式.md  hello-agents习题.md  temp.md  提示词模板.md
engineer/docs/learn/: @dataclass.md
engineer/docs/project/: README.md
engineer/examples/: memory_example.py  tools_example.py  tools_simple_demo.py
engineer/src/agent/: agent.py  config.py  sql_agent.py  test_agent.py  tools.py
engineer/src/algorithm/: __init__.py  contest.py  sliding_window.py  two_pointers.py
engineer/src/core/: __init__.py  base_llm.py  chat_model_factory.py  language_models.py  llm_factory.py  llm_manager.py  llm_providers.py  messages.py  model_detector.py  model_info.py
engineer/src/data_structure/: linked_list.py
engineer/src/engineer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engineer/src/pattern/: __init__.py  base_agent.py  llm_compiler.py  plan_and_solve.py  react.py  reflection.py  rewoo.py  self_discover.py  tools.py
engineer/src/sample/: README.md  __init__.py  basic_reflection.py  llm_compiler.py  llm_integration_example.py  plan_and_slove.py  plan_slove_sample.py  qwen_llm.py  react.py  react_sample.py  reason_without_observation.py  reflection.py  reflexion.py  rewoo.py  self-discover.py  (+2 more)
engineer/test/: test_chatbot.py  test_langchain.py  test_workflow.py
engineer/tests/: test_tools.py
engineer/util/: llm_factory.py
(+93 files in other folders)
